Name:                Scheduling
Version:             0.0.0.1
-- synopsis:            
-- description:         
-- license:             
License-File:        LICENSE
Author:              Matt Renaud
Maintainer:          Matt Renaud <mrenaud92@gmail.com>
-- copyright:           
-- category:            
Build-Type:          Simple
-- extra-source-files:  
Cabal-Version:       >=1.10

Library
  Exposed-Modules:     Playground, Driver, DataStructures.Queue, Scheduling.Types, Scheduling.JobUtils, Scheduling.Algorithm.RoundRobin
  -- other-modules:       
  Other-Extensions:    RecordWildCards
  Build-Depends:       base >=4.8 && <4.9, transformers >=0.4 && <0.5, mtl >=2.2 && <2.3, psqueues >= 0.2.0.0 && <0.3.0.0
  Hs-Source-Dirs:      src
  Default-Language:    Haskell2010
